# legal-qa-vn

./: .env.example  .gitignore  CHANGES_SUMMARY.md  ENTITY_CLUSTERING_GUIDE.md  GUIDE_DISTRIBUTED_INDEXING.md  README.md  SETUP.md  api_server.py  chunks_59.2026.ND.CP.json  debug_chroma_collection.json  debug_db.py  evaluate.py  evaluate1.py  m1.py  main.py  print_chunks.py  prompt.txt  pyproject.toml  query.py  test_build_json_tree.py  test_dieu_1_v2.py  test_extract_title.py  test_llm_analyzer.py  test_workflow.py  valuate.py
configs/: agent_config.yaml  rerank_config.yaml  search_config.yaml
configs/prompts/: entity_extraction_guide.txt
docs/: database_guide.md  relationship_builder_guide.md  setup.md
evaluate/: evaluate.py  evaluate1.py  prompt_1_4.py
evaluation/: evaluation_result_1.4_no_rerank_top5.json  evaluation_result_1.4_rerank5_top20.json  evaluation_result_1.4_rerank5_top20_1.json  evaluation_results_3.1_no_rerank_top5.json  evaluation_results_3.1_no_rerank_top_5.json  evaluation_results_3.1_rerank5_top20.json  prompt_1_4.py  prompt_3_1.py  valuate1.py
frontend/: GUIDE.md  api-host-nlp-backend-new-v2.ipynb
migrations/: add_trang_thai_chroma.py  add_trang_thai_sqlite.py
scripts/: filter_agencies.py  host.py  index_parquet.py  inspect_chunk.py  load_dataset.py  merge_chroma.py  prepare_filtered_data.py  test_chunking.py
src/: schemas.py
system/: indexing_100file.py  relationship_builder.py  relationship_test.py  replace_file_service.py  schemas.py
test/: db_test.txt  query_db.py  query_out.txt  test_evaluate_refs.py  test_nodes.py
(+124 files in other folders)
